--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="https://unpkg.com/dropzone@5/dist/min/dropzone.min.css" type="text/css" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/@popperjs/core@2"></script>
+        <script src="https://cdn.jsdelivr.net/gh/cytoscape/cytoscape.js-popper/cytoscape-popper.js"></script>
         <style>
             body {
                 font-family: Roboto, "Open Sans", sans-serif;
@@ -26,6 +28,12 @@
                 border-image: none;
                 margin-left: auto;
                 margin-right: auto;
+            }
+
+            .popper-div {
+                background-color: rgba(255, 255, 255, 0.716);
+                border-radius: 25px;
+                padding: 10px;
             }
         </style>
     </head>
@@ -253,7 +261,34 @@
                               ele.style("border-color","black")
                             })
                         })
+
+                        cy.nodes().on('mouseover', function(x){
+                            ele = x.target
+                            console.log(ele)
+                            ele.popper({
+                                content: function(x){ return generate_tooltip(ele)}
+                            })
+                        })
+
+                        cy.nodes().on('mouseout', function(x){
+                            document.getElementsByClassName('popper-div').forEach(function(x){
+                                x.remove()
+                            })
+                        })
                         
+                        var generate_tooltip = function(ele){
+                            console.log("asd")
+                            console.log(ele)
+
+                            var div = document.createElement('div');
+                            div.classList.add('popper-div');
+                            div.innerHTML = ele.data('id') + "<br>" + ele.data('lineage') + "<br>" + ele.data('drtype');
+                            document.body.appendChild( div );
+                            return div;
+                        };
+
+
+
                         download_sample_names = function() {
                             var element = document.createElement('a');
                             text = ""
