fix broken link

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <a href="https://docs.simpleanalytics.com/what-we-collect" target="_blank">Simple Analytics</a>.
                         </div>
                         <div class="p-2">
-                            Don't have data yet? Download <a href="/example.json" download>this example</a> 
+                            Don't have data yet? Download <a href="/transmission-graph-viewer/example.json" download>this example</a> 
                             file to have a go!
                         </div>
                         <div class="p-2">
